2006-02-13  Christian Persch  <chpe@cvs.gnome.org>

	* src/bookmarks/ephy-bookmarks.c: (resolve_cb), (browse_cb),
	(ephy_local_bookmarks_init), (ephy_local_bookmarks_stop),
	(ephy_bookmarks_finalize), (ephy_bookmarks_new):

	Fix crash when resolve returns an error, bug #331028.
	Restructure 0conf code.

2006-02-13  Christian Persch  <chpe@cvs.gnome.org>

	* src/bookmarks/ephy-bookmarks.c: (add_to_favorites),
	(history_site_visited_cb), (history_cleared_cb),
	(get_id_for_service), (get_node_for_service), (resolve_cb),
	(browse_cb):
	* src/bookmarks/ephy-bookmarks.h:

	Fix removing zeroconf bookmarks when the service disappears,
	and updating them when they reappear. Bugs #329637, #330883.

2006-02-13  Christian Persch  <chpe@cvs.gnome.org>

	* src/bookmarks/ephy-bookmarks-editor.c: (cmd_toolbar):

	Place bookmarks on "BookmarksBar" toolbar, since
	that's what < 1.9 used too.

2006-02-12  Jean-François Rameau  <jframeau@cvs.gnome.org>

	* src/ephy-net-monitor.c: (ephy_net_monitor_check_for_active_device):

	Doesn't return the right variable !
	Add a LOG to trace EphyNetworkMonitor's check for active device.

2006-02-12  Christian Persch  <chpe@cvs.gnome.org>

	* src/bookmarks/ephy-bookmark-factory-action.c:
	(build_menu_for_topic):
	* src/bookmarks/ephy-topic-factory-action.c: (build_menu):

	Strdup the action name data.

2006-02-12  Christian Persch  <chpe@cvs.gnome.org>

	* src/bookmarks/ephy-open-tabs-action.c: (node_added_cb),
	(node_removed_cb):

	Use the right action name.

2006-02-12  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-session.c: (save_yourself_cb):

	Reqeust interaction with the client when there are
	unfinished downloads.

2006-02-10  Peter Harvey  <peter.a.harvey@gmail.com>

	* src/bookmarks/ephy-bookmarks-menu.c
	* src/bookmarks/ephy-bookmarks-ui.c
	
	Additional minor cleanups.

2006-02-10  Christian Persch  <chpe@cvs.gnome.org>

	* src/bookmarks/ephy-bookmark-action-group.c: (smart_added_cb),