@@ -1,3 +1,13 @@
+2006-02-14  Christian Persch  <chpe@cvs.gnome.org>
+
+	* lib/ephy-file-helpers.c: (ephy_file_helpers_init),
+	(ephy_file_helpers_shutdown), (ephy_file_delete_on_exit),
+	(ephy_file_monitor_cancel), (ephy_file_delete_directory):
+	* lib/ephy-file-helpers.h:
+	* src/ephy-main.c: (main):
+
+	Move --private-instance out of debug #ifdef.
+
 2006-02-13  Christian Persch  <chpe@cvs.gnome.org>
 
 	* src/bookmarks/ephy-bookmarks.c: (resolve_cb), (browse_cb),
